--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    height: 100vh;
+    /* height: 100vh; */
     box-sizing: border-box;
     background-color: white;
     color: #1F5673;
@@ -22,7 +22,7 @@ body {
 }
 
 .apresentacao {
-    margin: 10% 15%;
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -82,5 +82,15 @@ body {
     font-family: 'Krona One', sans-serif;
     font-size: 400;
     font-size: 24px;
+}
+
+.rodape {
+    padding: 24px;
+    background-color: #759FBC;
+    color: #F6F6F6;
+    text-align: center;
+    font-family: 'Montserrat';
+    font-size: 24px;
+    font-weight: 400;
 }
 
