--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,23 @@ body {
     color: #1F5673;
 }
 
+.cabecalho {
+    padding: 2% 0 0 15%;
+}
+
+.cabecalho__menu {
+    display: flex;
+    gap: 80px;
+
+}
+
+.cabecalho__menu__link {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: #1F5673;
+}
+
 .titulo-destaque {
     color: #EF8354;
 }
@@ -22,9 +39,9 @@ body {
 }
 
 .apresentacao {
-    padding: 5% 15%;
+    padding: 3% 15%;
     display: flex;
-    align-items: center;
+    align-items: center;    
     justify-content: space-evenly;
 }
 
@@ -89,7 +106,7 @@ body {
     background-color: #759FBC;
     color: #F6F6F6;
     text-align: center;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat',sans-serif;
     font-size: 24px;
     font-weight: 400;
 }
