--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ body {
 
 .cabecalho__menu__link {
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--cor-secundaria);
     text-decoration-line:none;
@@ -75,12 +75,12 @@ body {
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 36px;
+    font-size: 2.25rem; /*1 rem equivale a 16px*/
     font-family: var(--fonte-primaria);
 }
 
 .apresentacao__conteudo__paragrafo {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
 }
 
@@ -101,7 +101,7 @@ body {
     width: 378px;
     text-align: center;
     border-radius: 16px; /* Arredonda a Caixa */
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none; /* Retira o sublinhado */
@@ -118,8 +118,8 @@ body {
 
 .apresentacao__links__subtitulo {
     font-family: var(--fonte-primaria);
-    font-size: 400;
-    font-size: 24px;
+    font-weight: 400;
+    font-size: 1.5rem;
 }
 
 .rodape {
@@ -128,7 +128,7 @@ body {
     color: var(--cor-primaria);
     text-align: center;
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 
